@@ -43,6 +43,7 @@ import java.util.Spliterator;
 import java.util.stream.Stream;
 import jdk.internal.foreign.AbstractMemorySegmentImpl;
 import jdk.internal.foreign.HeapMemorySegmentImpl;
+import jdk.internal.foreign.MemorySessionImpl;
 import jdk.internal.foreign.NativeMemorySegmentImpl;
 import jdk.internal.foreign.Utils;
 import jdk.internal.foreign.abi.SharedUtils;
@@ -64,10 +65,10 @@ import jdk.internal.vm.annotation.ForceInline;
  * Heap segments can be obtained by calling one of the {@link MemorySegment#ofArray(int[])} factory methods.
  * These methods return a memory segment backed by the on-heap region that holds the specified Java array.
  * <p>
- * Native segments can be obtained by calling one of the {@link MemorySegment#allocateNative(long, long, SegmentScope)}
+ * Native segments can be obtained by calling one of the {@link Arena#allocate(long, long)}
  * factory methods, which return a memory segment backed by a newly allocated off-heap region with the given size
  * and aligned to the given alignment constraint. Alternatively, native segments can be obtained by
- * {@link FileChannel#map(MapMode, long, long, SegmentScope) mapping} a file into a new off-heap region
+ * {@link FileChannel#map(MapMode, long, long, Arena) mapping} a file into a new off-heap region
  * (in some systems, this operation is sometimes referred to as {@code mmap}).
  * Segments obtained in this way are called <em>mapped</em> segments, and their contents can be {@linkplain #force() persisted} and
  * {@linkplain #load() loaded} to and from the underlying memory-mapped file.
@@ -92,23 +93,22 @@ import jdk.internal.vm.annotation.ForceInline;
  * Every memory segment has a {@linkplain #byteSize() size}. The size of a heap segment is derived from the Java array
  * from which it is obtained. This size is predictable across Java runtimes.
  * The size of a native segment is either passed explicitly
- * (as in {@link MemorySegment#allocateNative(long, SegmentScope)}) or derived from a {@link MemoryLayout}
- * (as in {@link MemorySegment#allocateNative(MemoryLayout, SegmentScope)}). The size of a memory segment is typically
+ * (as in {@link Arena#allocate(long, long)}) or derived from a {@link MemoryLayout}
+ * (as in {@link Arena#allocate(MemoryLayout)}). The size of a memory segment is typically
  * a positive number but may be <a href="#wrapping-addresses">zero</a>, but never negative.
  * <p>
  * The address and size of a memory segment jointly ensure that access operations on the segment cannot fall
  * <em>outside</em> the boundaries of the region of memory which backs the segment.
  * That is, a memory segment has <em>spatial bounds</em>.
  * <p>
- * Every memory segment is associated with a {@linkplain SegmentScope scope}. This ensures that access operations
+ * Every memory segment is associated with a {@linkplain Scope scope}. This ensures that access operations
  * on a memory segment cannot occur when the region of memory which backs the memory segment is no longer available
- * (e.g., after the scope associated with the accessed memory segment is no longer {@linkplain SegmentScope#isAlive() alive}).
+ * (e.g., after the scope associated with the accessed memory segment is no longer {@linkplain Scope#isAlive() alive}).
  * That is, a memory segment has <em>temporal bounds</em>.
  * <p>
- * Finally, access operations on a memory segment are subject to the thread-confinement checks enforced by the associated
- * scope; that is, if the segment is associated with the {@linkplain SegmentScope#global() global scope} or an {@linkplain SegmentScope#auto() automatic scope},
- * it can be accessed by multiple threads. If the segment is associated with an arena scope, then it can only be
- * accessed compatibly with the <a href="Arena.html#thread-confinement">arena confinement characteristics</a>.
+ * Finally, access operations on a memory segment can be subject to additional thread-confinement checks.
+ * Heap segments can be accessed from any thread. Conversely, native segments can only be accessed compatibly with the
+ * <a href="ScopedArena.html#thread-confinement">confinement characteristics</a> of the arena used to obtain them.
  *
  * <h2 id="segment-deref">Accessing memory segments</h2>
  *
@@ -162,28 +162,28 @@ import jdk.internal.vm.annotation.ForceInline;
  * segment is derived from the address of the original segment, by adding an offset (expressed in bytes). The size of
  * the sliced segment is either derived implicitly (by subtracting the specified offset from the size of the original segment),
  * or provided explicitly. In other words, a sliced segment has <em>stricter</em> spatial bounds than those of the original segment:
- * {@snippet lang=java :
+ * {@snippet lang = java:
  * Arena arena = ...
  * MemorySegment segment = arena.allocate(100);
  * MemorySegment slice = segment.asSlice(50, 10);
  * slice.get(ValueLayout.JAVA_INT, 20); // Out of bounds!
  * arena.close();
  * slice.get(ValueLayout.JAVA_INT, 0); // Already closed!
- * }
+ *}
  * The above code creates a native segment that is 100 bytes long; then, it creates a slice that starts at offset 50
  * of {@code segment}, and is 10 bytes long. That is, the address of the {@code slice} is {@code segment.address() + 50},
  * and its size is 10. As a result, attempting to read an int value at offset 20 of the
- * {@code slice} segment will result in an exception. The {@linkplain SegmentScope temporal bounds} of the original segment
- * is inherited by its slices; that is, when the scope associated with {@code segment} is no longer {@linkplain SegmentScope#isAlive() alive},
+ * {@code slice} segment will result in an exception. The {@linkplain Arena temporal bounds} of the original segment
+ * is inherited by its slices; that is, when the scope associated with {@code segment} is no longer {@linkplain Scope#isAlive() alive},
  * {@code slice} will also be become inaccessible.
  * <p>
  * A client might obtain a {@link Stream} from a segment, which can then be used to slice the segment (according to a given
  * element layout) and even allow multiple threads to work in parallel on disjoint segment slices
- * (to do this, the segment has to be associated with a scope that allows {@linkplain SegmentScope#isAccessibleBy(Thread) access}
+ * (to do this, the segment has to be {@linkplain MemorySegment#isAccessibleBy(Thread) accessible}
  * from multiple threads). The following code can be used to sum all int values in a memory segment in parallel:
  *
  * {@snippet lang = java:
- * try (Arena arena = Arena.openShared()) {
+ * try (Arena arena = Arena.ofShared()) {
  *     SequenceLayout SEQUENCE_LAYOUT = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
  *     MemorySegment segment = arena.allocate(SEQUENCE_LAYOUT);
  *     int sum = segment.elements(ValueLayout.JAVA_INT).parallel()
@@ -242,8 +242,8 @@ import jdk.internal.vm.annotation.ForceInline;
  * <p>
  * The alignment constraint used to access a segment is typically dictated by the shape of the data structure stored
  * in the segment. For example, if the programmer wishes to store a sequence of 8-byte values in a native segment, then
- * the segment should be allocated by specifying a 8-byte alignment constraint, either via {@link #allocateNative(long, long, SegmentScope)}
- * or {@link #allocateNative(MemoryLayout, SegmentScope)}. These factories ensure that the off-heap region of memory backing
+ * the segment should be allocated by specifying a 8-byte alignment constraint, either via {@link Arena#allocate(long, long)}
+ * or {@link Arena#allocate(MemoryLayout)}. These factories ensure that the off-heap region of memory backing
  * the returned segment has a starting address that is 8-byte aligned. Subsequently, the programmer can access the
  * segment at the offsets of interest -- 0, 8, 16, 24, etc -- in the knowledge that every such access is aligned.
  * <p>
@@ -355,11 +355,11 @@ import jdk.internal.vm.annotation.ForceInline;
  * of memory whose size is not known, any access operations involving these segments cannot be validated.
  * In effect, a zero-length memory segment <em>wraps</em> an address, and it cannot be used without explicit intent.
  * <p>
- * Zero-length memory segments obtained when interacting with foreign functions are associated with the
- * {@link SegmentScope#global() global scope}. This is because the Java runtime, in addition to having no insight
+ * Zero-length memory segments obtained when interacting with foreign functions are associated with
+ * a fresh scope that is always alive. This is because the Java runtime, in addition to having no insight
  * into the size of the region of memory backing a pointer returned from a foreign function, also has no insight
- * into the lifetime intended for said region of memory by the foreign function that allocated it. The global scope
- * ensures that the obtained segment can be passed, opaquely, to other pointer-accepting foreign functions.
+ * into the lifetime intended for said region of memory by the foreign function that allocated it. Thus, zero-length
+ * memory segments cannot be accessed directly, but can be passed, opaquely, to other pointer-accepting foreign functions.
  * <p>
  * To access native zero-length memory segments, clients have several options, all of which are <em>unsafe</em>.
  * <p>
@@ -368,10 +368,10 @@ import jdk.internal.vm.annotation.ForceInline;
  * This segment can then be resized as needed, so that the resulting segment can then be accessed directly, as follows:
  *
  * {@snippet lang = java:
- * MemorySegment foreign = someSegment.get(ValueLayout.ADDRESS, 0); // wrap address into segment (size = 0) *
- * foreign = foreign.asUnbounded() // size = Long.MAX_VALUE
- *                  .asSlice(0, JAVA_INT); // size = 4
- * int x = foreign.get(ValueLayout.JAVA_INT, 0); //ok
+ * MemorySegment foreign = someSegment.get(ValueLayout.ADDRESS, 0); // wrap address into segment (size = 0)
+ * foreign = foreign.asUnbounded()                                  // size = Long.MAX_VALUE
+ *                  .asSlice(0, JAVA_INT);                          // size = 4
+ * int x = foreign.get(ValueLayout.JAVA_INT, 0);                    //ok
  *}
  *
  * Alternatively, if the size of the foreign segment is known statically, clients can associate a
@@ -385,18 +385,18 @@ import jdk.internal.vm.annotation.ForceInline;
  * int x = foreign.get(ValueLayout.JAVA_INT, 0); //ok
  *}
  *
- * Finally, clients can {@linkplain java.lang.foreign.MemorySegment#ofAddress(long, long, SegmentScope) obtain}
+ * Finally, clients can {@linkplain java.lang.foreign.MemorySegment#ofAddress(long, long, Arena) obtain}
  * a <em>new</em> native segment, with new spatial and temporal bounds, as follows:
  *
  * {@snippet lang = java:
- * SegmentScope scope = ... // obtains a scope
+ * Arena arena = ... // obtains an arena
  * MemorySegment foreign = someSegment.get(ValueLayout.ADDRESS, 0); // wrap address into segment (size = 0)
- * foreign = MemorySegment.ofAddress(foreign.address(), 4, scope); // create new segment (size = 4)
- * int x = foreign.get(ValueLayout.JAVA_INT, 0); //ok
+ * foreign = MemorySegment.ofAddress(foreign.address(), 4, arena);  // create new segment (size = 4)
+ * int x = foreign.get(ValueLayout.JAVA_INT, 0);                    // ok
  *}
  *
  * All of {@link #asUnbounded()}, {@link ValueLayout.OfAddress#withTargetLayout(MemoryLayout)}
- * and {@link #ofAddress(long, long, SegmentScope)} are
+ * and {@link #ofAddress(long, long, Arena)} are
  * <a href="package-summary.html#restricted"><em>restricted</em></a> methods, and should be used with caution:
  * for instance, resizing a segment incorrectly could result in a VM crash when attempting to access the memory segment.
  * <p>
@@ -434,7 +434,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * if the supplied layout has size N, then calling {@link Spliterator#trySplit()} will result in a spliterator serving
      * approximately {@code S/N} elements (depending on whether N is even or not), where {@code S} is the size of
      * this segment. As such, splitting is possible as long as {@code S/N >= 2}. The spliterator returns segments that
-     * are associated with the same scope as that associated with this segment.
+     * have the same lifetime as that of this segment.
      * <p>
      * The returned spliterator effectively allows to slice this segment into disjoint {@linkplain #asSlice(long, long) slices},
      * which can then be processed in parallel by multiple threads.
@@ -467,7 +467,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
     /**
      * {@return the scope associated with this memory segment}
      */
-    SegmentScope scope();
+    Scope scope();
+
+    /**
+     * {@return {@code true} if this segment can be accessed from the provided thread}
+     * @param thread the thread to be tested.
+     */
+    boolean isAccessibleBy(Thread thread);
 
     /**
      * {@return the size (in bytes) of this memory segment}
@@ -587,7 +593,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Returns {@code true} if this segment is a native segment. A native segment is
-     * created e.g. using the {@link #allocateNative(long, SegmentScope)} (and related) factory, or by
+     * created e.g. using the {@link Arena#allocate(long, long)} (and related) factory, or by
      * {@linkplain #ofBuffer(Buffer) wrapping} a {@linkplain ByteBuffer#allocateDirect(int) direct buffer}.
      * @return {@code true} if this segment is native segment.
      */
@@ -595,7 +601,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Returns {@code true} if this segment is a mapped segment. A mapped memory segment is created e.g. using the
-     * {@link FileChannel#map(FileChannel.MapMode, long, long, SegmentScope)} factory, or by
+     * {@link FileChannel#map(FileChannel.MapMode, long, long, Arena)} factory, or by
      * {@linkplain #ofBuffer(Buffer) wrapping} a {@linkplain java.nio.MappedByteBuffer mapped byte buffer}.
      * @return {@code true} if this segment is a mapped segment.
      */
@@ -662,9 +668,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param value the value to fill into this segment
      * @return this memory segment
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is read-only (see {@link #isReadOnly()}).
      */
     MemorySegment fill(byte value);
@@ -681,13 +687,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param src the source segment.
      * @throws IndexOutOfBoundsException if {@code src.byteSize() > this.byteSize()}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code src} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code src.scope().isAccessibleBy(T) == false}.
+     * such that {@code src.isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is read-only (see {@link #isReadOnly()}).
      * @return this segment.
      */
@@ -715,13 +721,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @return the relative offset, in bytes, of the first mismatch between this
      * and the given other segment, otherwise -1 if no mismatch
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code other} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code other.scope().isAccessibleBy(T) == false}.
+     * such that {@code other.isAccessibleBy(T) == false}.
      */
     default long mismatch(MemorySegment other) {
         Objects.requireNonNull(other);
@@ -747,9 +753,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *          is resident in physical memory
      *
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      */
@@ -764,9 +770,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * occur. </p>
      *
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      */
@@ -781,9 +787,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * occur (as this segment's contents might need to be paged back in). </p>
      *
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      */
@@ -810,9 +816,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * </p>
      *
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      * @throws UncheckedIOException if there is an I/O error writing the contents of this segment to the associated storage device
@@ -832,11 +838,11 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * returned if this segment' size is greater than {@link Integer#MAX_VALUE}.
      * <p>
      * The life-cycle of the returned buffer will be tied to that of this segment. That is, accessing the returned buffer
-     * after the scope associated with this segment is no longer {@linkplain SegmentScope#isAlive() alive}, will
+     * after the scope associated with this segment is no longer {@linkplain Scope#isAlive() alive}, will
      * throw an {@link IllegalStateException}. Similarly, accessing the returned buffer from a thread {@code T}
-     * such that {@code scope().isAccessible(T) == false} will throw a {@link WrongThreadException}.
+     * such that {@code isAccessible(T) == false} will throw a {@link WrongThreadException}.
      * <p>
-     * If this segment is associated with a scope that can only be accessed from a single thread, calling read/write I/O
+     * If this segment is accessible from a single thread, calling read/write I/O
      * operations on the resulting buffer might result in an unspecified exception being thrown. Examples of such problematic operations are
      * {@link java.nio.channels.AsynchronousSocketChannel#read(ByteBuffer)} and
      * {@link java.nio.channels.AsynchronousSocketChannel#write(ByteBuffer)}.
@@ -857,9 +863,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new byte array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code byte[]} instance,
      * e.g. its size is greater than {@link Integer#MAX_VALUE}.
      */
@@ -871,9 +877,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new short array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code short[]} instance,
      * e.g. because {@code byteSize() % 2 != 0}, or {@code byteSize() / 2 > Integer#MAX_VALUE}
      */
@@ -885,9 +891,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new char array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code char[]} instance,
      * e.g. because {@code byteSize() % 2 != 0}, or {@code byteSize() / 2 > Integer#MAX_VALUE}.
      */
@@ -899,9 +905,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new int array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code int[]} instance,
      * e.g. because {@code byteSize() % 4 != 0}, or {@code byteSize() / 4 > Integer#MAX_VALUE}.
      */
@@ -913,9 +919,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new float array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code float[]} instance,
      * e.g. because {@code byteSize() % 4 != 0}, or {@code byteSize() / 4 > Integer#MAX_VALUE}.
      */
@@ -927,9 +933,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new long array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code long[]} instance,
      * e.g. because {@code byteSize() % 8 != 0}, or {@code byteSize() / 8 > Integer#MAX_VALUE}.
      */
@@ -941,9 +947,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new double array whose contents are copied from this memory segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code double[]} instance,
      * e.g. because {@code byteSize() % 8 != 0}, or {@code byteSize() / 8 > Integer#MAX_VALUE}.
      */
@@ -963,9 +969,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @throws IndexOutOfBoundsException if {@code offset < 0} or {@code S + offset > byteSize()}, where {@code S} is the size of the UTF-8
      * string (including the terminator character).
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      */
     default String getUtf8String(long offset) {
         return SharedUtils.toJavaStringInternal(this, offset);
@@ -988,9 +994,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param str the Java string to be written into this segment.
      * @throws IndexOutOfBoundsException if {@code offset < 0} or {@code str.getBytes().length() + offset >= byteSize()}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      */
     default void setUtf8String(long offset, String str) {
         Utils.toCString(str.getBytes(StandardCharsets.UTF_8), SegmentAllocator.prefixAllocator(asSlice(offset)));
@@ -1005,15 +1011,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * {@linkplain ByteBuffer#isReadOnly() read-only}. Moreover, if the buffer is a {@linkplain Buffer#isDirect() direct buffer},
      * the returned segment is a native segment; otherwise the returned memory segment is a heap segment.
      * <p>
-     * The scope {@code S} associated with the returned segment is computed as follows:
-     * <ul>
-     *     <li>if the buffer has been obtained by calling {@link #asByteBuffer()} on a memory segment whose scope
-     *     is {@code S'}, then {@code S = S'}; or</li>
-     *     <li>if the buffer is a heap buffer, then {@code S} is the {@linkplain SegmentScope#global() global scope}; or
-     *     <li>if the buffer is a direct buffer, then {@code S} is a scope that is always alive and which keeps the buffer reachable.
-     *     Therefore, the off-heap region of memory backing the buffer instance will remain available as long as the
-     *     returned segment is reachable.</li>
-     * </ul>
+     * If the provided buffer has been obtained by calling {@link #asByteBuffer()} on a memory segment whose
+     * {@linkplain Scope scope} is {@code S}, the returned segment will be associated with the
+     * same scope {@code S}. Otherwise, the scope of the returned segment is a fresh scope that is always alive.
+     * <p>
+     * The scope associated with the returned segment keeps the provided buffer reachable. As such, if
+     * the provided buffer is a direct buffer, its backing memory region will not be deallocated as long as the
+     * returned segment (or any of its slices) are kept reachable.
      *
      * @param buffer the buffer instance to be turned into a new memory segment.
      * @return a memory segment, derived from the given buffer instance.
@@ -1028,8 +1032,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given byte array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param byteArray the primitive array backing the heap memory segment.
      * @return a heap memory segment backed by a byte array.
@@ -1040,8 +1044,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given char array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param charArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a char array.
@@ -1052,8 +1056,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given short array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param shortArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a short array.
@@ -1064,8 +1068,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given int array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param intArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by an int array.
@@ -1076,8 +1080,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given float array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param floatArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a float array.
@@ -1088,8 +1092,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given long array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param longArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a long array.
@@ -1100,8 +1104,8 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given double array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The scope of the returned segment is a fresh scope that is always alive, and keeps the given byte array reachable.
+     * The returned segment is always accessible, from any thread. Its {@link #address()} is set to zero.
      *
      * @param doubleArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a double array.
@@ -1117,7 +1121,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a zero-length native segment from the given {@linkplain #address() address value}.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}.
+     * The returned segment is always accessible, from any thread.
      * <p>
      * This is equivalent to the following code:
      * {@snippet lang = java:
@@ -1137,12 +1141,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a native segment with the given size and {@linkplain #address() address value}.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}.
+     * The returned segment is not {@linkplain MemorySegment#isReadOnly()} read-only), and is associated
+     * with a fresh scope that is always alive.
      * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang = java:
-     * ofAddress(address, byteSize, SegmentScope.global());
-     *}
+     * Clients should ensure that the address and bounds refer to a valid region of memory that is accessible for reading and,
+     * if appropriate, writing; an attempt to access an invalid address from Java code will either return an arbitrary value,
+     * have no visible effect, or cause an unspecified exception to be thrown.
+     * <p>
      * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
      * Restricted methods are unsafe, and, if used incorrectly, their use might crash
      * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
@@ -1161,21 +1166,16 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
     @CallerSensitive
     static MemorySegment ofAddress(long address, long byteSize) {
         Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        return MemorySegment.ofAddress(address, byteSize, SegmentScope.global());
+        return MemorySegment.ofAddress(address, byteSize, Arena.global());
     }
 
     /**
-     * Creates a native segment with the given size, address, and scope.
-     * This method can be useful when interacting with custom memory sources (e.g. custom allocators),
-     * where an address to some underlying region of memory is typically obtained from foreign code
-     * (often as a plain {@code long} value).
-     * <p>
-     * The returned segment is not read-only (see {@link MemorySegment#isReadOnly()}), and is associated with the
-     * provided scope.
+     * Creates a native segment with the given size, {@linkplain #address() address value} and arena.
+     * The returned segment is always accessible, from any thread.
      * <p>
      * This is equivalent to the following code:
      * {@snippet lang = java:
-     * ofAddress(address, byteSize, scope, null);
+     * ofAddress(address, byteSize, arena, null);
      *}
      * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
      * Restricted methods are unsafe, and, if used incorrectly, their use might crash
@@ -1188,33 +1188,34 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *
      * @param address the returned segment's address.
      * @param byteSize the desired size.
-     * @param scope the scope associated with the returned native segment.
-     * @return a native segment with the given address, size and scope.
+     * @param arena the arena associated with the returned native segment.
+     * @return a native segment with the given address, size and arena.
      * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if {@code arena.scope().isAlive() == false}
+     * @throws WrongThreadException if {@code arena} is a confined arena, and this method is called from a
+     * thread {@code T}, other than the arena's owner thread.
      * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
      */
     @CallerSensitive
     @ForceInline
-    static MemorySegment ofAddress(long address, long byteSize, SegmentScope scope) {
+    static MemorySegment ofAddress(long address, long byteSize, Arena arena) {
         Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        Objects.requireNonNull(scope);
+        Objects.requireNonNull(arena);
         Utils.checkAllocationSizeAndAlign(byteSize, 1);
-        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, byteSize, scope, null);
+        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, byteSize,
+                MemorySessionImpl.toMemorySession(arena), null);
     }
 
     /**
-     * Creates a native segment with the given size, address, and scope.
+     * Creates a native segment with the given size, {@linkplain #address() address value}, and arena.
      * This method can be useful when interacting with custom memory sources (e.g. custom allocators),
      * where an address to some underlying region of memory is typically obtained from foreign code
      * (often as a plain {@code long} value).
      * <p>
-     * The returned segment is not read-only (see {@link MemorySegment#isReadOnly()}), and is associated with the
-     * provided scope.
-     * <p>
-     * The provided cleanup action (if any) will be invoked when the scope becomes not {@linkplain SegmentScope#isAlive() alive}.
+     * The returned segment is not {@linkplain MemorySegment#isReadOnly()} read-only), and its lifetime is controlled
+     * by the provided arena. For instance, if the provided arena is a confined arena, the returned
+     * native segment will be invalidated - and the provided cleanup action invoked - when the provided confined arena
+     * is {@linkplain Arena#close() closed}.
      * <p>
      * Clients should ensure that the address and bounds refer to a valid region of memory that is accessible for reading and,
      * if appropriate, writing; an attempt to access an invalid address from Java code will either return an arbitrary value,
@@ -1231,123 +1232,22 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *
      * @param address the returned segment's address.
      * @param byteSize the desired size.
-     * @param scope the scope associated with the returned native segment.
+     * @param arena the arena associated with the returned native segment.
      * @param cleanupAction the custom cleanup action to be associated to the returned segment (can be null).
-     * @return a native segment with the given address, size and scope.
+     * @return a native segment with the given address, size and arena.
      * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if {@code arena.scope().isAlive() == false}
+     * @throws WrongThreadException if {@code arena} is a confined arena, and this method is called from a
+     * thread {@code T}, other than the arena's owner thread.
      * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
      */
     @CallerSensitive
-    static MemorySegment ofAddress(long address, long byteSize, SegmentScope scope, Runnable cleanupAction) {
+    static MemorySegment ofAddress(long address, long byteSize, Arena arena, Runnable cleanupAction) {
         Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        Objects.requireNonNull(scope);
+        Objects.requireNonNull(arena);
         Utils.checkAllocationSizeAndAlign(byteSize, 1);
-        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, byteSize, scope, cleanupAction);
-    }
-
-    /**
-     * Creates a native segment with the given layout and scope.
-     * <p>
-     * The lifetime off-heap region of memory associated with the returned native segment is determined by the
-     * provided scope. The off-heap memory region is deallocated when the scope becomes not
-     * {@linkplain SegmentScope#isAlive() alive}. If the scope has been obtained using an {@link Arena},
-     * clients are responsible for ensuring that the arena is closed when the returned segment is no longer in use
-     * Failure to do so will result in off-heap memory leaks. As an alternative, an {@linkplain SegmentScope#auto() automatic scope}
-     * can be used, allowing the off-heap memory region associated with the returned native segment to be
-     * automatically released some unspecified time after the scope is no longer referenced.
-     * <p>
-     * The {@linkplain #address() address} of the returned memory segment is the starting address of
-     * the newly allocated off-heap region backing the segment. Moreover, the {@linkplain #address() address}
-     * of the returned segment will be aligned according to the alignment constraint of the provided layout.
-     * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang=java :
-     * allocateNative(layout.bytesSize(), layout.bytesAlignment(), scope);
-     * }
-     * <p>
-     * The region of off-heap region backing the returned native segment is initialized to zero.
-     *
-     * @param layout the layout of the off-heap memory region backing the native segment.
-     * @param scope the scope associated with the returned native segment.
-     * @return a new native segment.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     */
-    static MemorySegment allocateNative(MemoryLayout layout, SegmentScope scope) {
-        Objects.requireNonNull(layout);
-        Objects.requireNonNull(scope);
-        return allocateNative(layout.byteSize(), layout.byteAlignment(), scope);
-    }
-
-    /**
-     * Creates a native segment with the given size (in bytes) and scope.
-     * <p>
-     * The lifetime off-heap region of memory associated with the returned native segment is determined by the
-     * provided scope. The off-heap memory region is deallocated when the scope becomes not
-     * {@linkplain SegmentScope#isAlive() alive}. If the scope has been obtained using an {@link Arena},
-     * clients are responsible for ensuring that the arena is closed when the returned segment is no longer in use
-     * Failure to do so will result in off-heap memory leaks. As an alternative, an {@linkplain SegmentScope#auto() automatic scope}
-     * can be used, allowing the off-heap memory region associated with the returned native segment to be
-     * automatically released some unspecified time after the scope is no longer referenced.
-     * <p>
-     * The {@linkplain #address() address} of the returned memory segment is the starting address of
-     * the newly allocated off-heap region backing the segment. Moreover, the {@linkplain #address() address}
-     * of the returned segment is guaranteed to be at least 1-byte aligned.
-     * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang=java :
-     * allocateNative(bytesSize, 1, scope);
-     * }
-     * <p>
-     * The region of off-heap region backing the returned native segment is initialized to zero.
-     *
-     * @param byteSize the size (in bytes) of the off-heap memory region of memory backing the native memory segment.
-     * @param scope the scope associated with the returned native segment.
-     * @return a new native memory segment.
-     * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     */
-    static MemorySegment allocateNative(long byteSize, SegmentScope scope) {
-        return allocateNative(byteSize, 1, scope);
-    }
-
-    /**
-     * Creates a native segment with the given size (in bytes), alignment (in bytes) and scope.
-     * <p>
-     * The lifetime off-heap region of memory associated with the returned native segment is determined by the
-     * provided scope. The off-heap memory region is deallocated when the scope becomes not
-     * {@linkplain SegmentScope#isAlive() alive}. If the scope has been obtained using an {@link Arena},
-     * clients are responsible for ensuring that the arena is closed when the returned segment is no longer in use
-     * Failure to do so will result in off-heap memory leaks. As an alternative, an {@linkplain SegmentScope#auto() automatic scope}
-     * can be used, allowing the off-heap memory region associated with the returned native segment to be
-     * automatically released some unspecified time after the scope is no longer referenced.
-     * <p>
-     * The {@linkplain #address() address} of the returned memory segment is the starting address of
-     * the newly allocated off-heap region backing the segment. Moreover, the {@linkplain #address() address}
-     * of the returned segment will be aligned according to the provided alignment constraint.
-     * <p>
-     * The region of off-heap region backing the returned native segment is initialized to zero.
-     *
-     * @param byteSize the size (in bytes) of the off-heap region of memory backing the native memory segment.
-     * @param byteAlignment the alignment constraint (in bytes) of the off-heap region of memory backing the native memory segment.
-     * @param scope the scope associated with the returned native segment.
-     * @return a new native memory segment.
-     * @throws IllegalArgumentException if {@code byteSize < 0}, {@code byteAlignment <= 0}, or if {@code byteAlignment}
-     *                                  is not a power of 2.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     */
-    static MemorySegment allocateNative(long byteSize, long byteAlignment, SegmentScope scope) {
-        Objects.requireNonNull(scope);
-        Utils.checkAllocationSizeAndAlign(byteSize, byteAlignment);
-        return NativeMemorySegmentImpl.makeNativeSegment(byteSize, byteAlignment, scope);
+        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, byteSize,
+                MemorySessionImpl.toMemorySession(arena), cleanupAction);
     }
 
     /**
@@ -1374,13 +1274,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param dstOffset the starting offset, in bytes, of the destination segment.
      * @param bytes the number of bytes to be copied.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code srcSegment.scope().isAccessibleBy(T) == false}.
+     * such that {@code srcSegment.isAccessibleBy(T) == false}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code dstSegment.scope().isAccessibleBy(T) == false}.
+     * such that {@code dstSegment.isAccessibleBy(T) == false}.
      * @throws IndexOutOfBoundsException if {@code srcOffset + bytes > srcSegment.byteSize()} or if
      * {@code dstOffset + bytes > dstSegment.byteSize()}, or if either {@code srcOffset}, {@code dstOffset}
      * or {@code bytes} are {@code < 0}.
@@ -1421,13 +1321,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the source
      * (resp. destination) element layout, or if the source (resp. destination) element layout alignment is greater than its size.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code srcSegment().scope().isAccessibleBy(T) == false}.
+     * such that {@code srcSegment().isAccessibleBy(T) == false}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code dstSegment().scope().isAccessibleBy(T) == false}.
+     * such that {@code dstSegment().isAccessibleBy(T) == false}.
      * @throws IndexOutOfBoundsException if {@code srcOffset + (elementCount * S) > srcSegment.byteSize()} or if
      * {@code dstOffset + (elementCount * S) > dstSegment.byteSize()}, where {@code S} is the byte size
      * of the element layouts, or if either {@code srcOffset}, {@code dstOffset} or {@code elementCount} are {@code < 0}.
@@ -1474,9 +1374,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a byte value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1494,9 +1394,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the byte value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1515,9 +1415,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a boolean value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1535,9 +1435,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the boolean value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1556,9 +1456,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a char value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1576,9 +1476,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the char value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1597,9 +1497,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a short value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1617,9 +1517,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the short value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1638,9 +1538,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return an int value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1658,9 +1558,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the int value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1679,9 +1579,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a float value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1699,9 +1599,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the float value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1720,9 +1620,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a long value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1740,9 +1640,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the long value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1761,9 +1661,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a double value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1781,9 +1681,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the double value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1797,7 +1697,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Reads an address from this segment at the given offset, with the given layout. The read address is wrapped in
-     * a native segment, associated with the {@linkplain SegmentScope#global() global scope}. Under normal conditions,
+     * a native segment, associated with a fresh scope that is always alive. Under normal conditions,
      * the size of the returned segment is {@code 0}. However, if the provided address layout has a
      * {@linkplain OfAddress#targetLayout()} {@code T}, then the size of the returned segment
      * is set to {@code T.byteSize()}.
@@ -1805,9 +1705,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a native segment wrapping an address read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IllegalArgumentException if provided address layout has a {@linkplain OfAddress#targetLayout() target layout}
@@ -1828,9 +1728,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the address value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1851,9 +1751,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a char value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1875,9 +1775,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the char value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1900,9 +1800,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a short value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1924,9 +1824,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the short value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1949,9 +1849,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return an int value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1973,9 +1873,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the int value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1998,9 +1898,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a float value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2022,9 +1922,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the float value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2047,9 +1947,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a long value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2071,9 +1971,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the long value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2096,9 +1996,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a double value read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2120,9 +2020,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the double value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2139,19 +2039,18 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Reads an address from this segment at the given at the given index, scaled by the given layout size. The read address is wrapped in
-     * a native segment, associated with the {@linkplain SegmentScope#global() global scope}. Under normal conditions,
+     * a native segment, associated with a fresh scope that is always alive. Under normal conditions,
      * the size of the returned segment is {@code 0}. However, if the provided address layout has a
      * {@linkplain OfAddress#targetLayout()} {@code T}, then the size of the returned segment
      * is set to {@code T.byteSize()}.
-     *
      * @param layout the layout of the region of memory to be read.
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a native segment wrapping an address read from this segment.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2176,9 +2075,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the address value to be written.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2238,7 +2137,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param dstIndex the starting index of the destination array.
      * @param elementCount the number of array elements to be copied.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
      * such that {@code srcSegment().isAccessibleBy(T) == false}.
      * @throws  IllegalArgumentException if {@code dstArray} is not an array, or if it is an array but whose type is not supported,
@@ -2272,7 +2171,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param dstOffset the starting offset, in bytes, of the destination segment.
      * @param elementCount the number of array elements to be copied.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
      * such that {@code dstSegment().isAccessibleBy(T) == false}.
      * @throws  IllegalArgumentException if {@code srcArray} is not an array, or if it is an array but whose type is not supported,
@@ -2314,13 +2213,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @return the relative offset, in bytes, of the first mismatch between the source and destination segments,
      * otherwise -1 if no mismatch.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code srcSegment.scope().isAccessibleBy(T) == false}.
+     * such that {@code srcSegment.isAccessibleBy(T) == false}.
      * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * {@linkplain Scope#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code dstSegment.scope().isAccessibleBy(T) == false}.
+     * such that {@code dstSegment.isAccessibleBy(T) == false}.
      * @throws IndexOutOfBoundsException if {@code srcFromOffset < 0}, {@code srcToOffset < srcFromOffset} or
      * {@code srcToOffset > srcSegment.byteSize()}
      * @throws IndexOutOfBoundsException if {@code dstFromOffset < 0}, {@code dstToOffset < dstFromOffset} or
@@ -2335,4 +2234,45 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
                 dstSegment, dstFromOffset, dstToOffset);
     }
 
+    /**
+     * A scope controls access to one or more memory segments. That is, a memory segment cannot be accessed if its
+     * associated scope is not {@linkplain #isAlive() alive}. In other words, a scope models the <em>lifetime</em>
+     * of all the memory segments associated with it.
+     * <p>
+     * A new scope can be created, indirectly, by creating a new {@linkplain Arena arena}. For instance, when a new
+     * {@linkplain Arena#ofConfined() confined} arena is created, a new scope is also created. This scope - the arena scope - is
+     * starts as {@link #isAlive() alive}. When the confined arena is {@linkplain Arena#close() closed},
+     * the arena scope becomes no longer alive.
+     * <p>
+     * Scope instances can be compared for equality. That is, two scopes
+     * are considered {@linkplain #equals(Object)} if they denote the same lifetime.
+     */
+    @PreviewFeature(feature=PreviewFeature.Feature.FOREIGN)
+    sealed interface Scope permits MemorySessionImpl {
+        /**
+         * {@return {@code true}, if the regions of memory backing the memory segments associated with this scope are
+         * still valid}
+         */
+        boolean isAlive();
+
+        /**
+         * Returns {@code true}, if the provided object is also a scope, and the lifetime associated with this scope
+         * and that scope are the same. In that case, it is always the case that
+         * {@code this.isAlive() == ((Scope)that).isAlive()}.
+         * @param that the object to be tested.
+         * @return {@code true}, if the provided object is also a scope, and the lifetime associated with this scope
+         * and that scope are the same.
+         */
+        @Override
+        boolean equals(Object that);
+
+        /**
+         * Returns the hash code of this scope object.
+         * @implSpec Implementations of this method obey the general contract of {@link Object#hashCode}.
+         * @return the hash code of this scope object.
+         * @see #equals(Object)
+         */
+        @Override
+        int hashCode();
+    }
 }
